# RADiCAL_COE_REU_2026

./: .gitignore  CMakeLists.txt  README.md  radical.cc  run.sh
analysis/: analyze.C  draw_hex7.C  draw_hex_longitudinal.C  eres_compare.C  hex_compare.C  myplots.C
docs/: GEANT4_GUIDE.md  PROJECT_NOTES.md  THINGS_TO_TRY.md
include/: RadicalActionInitialization.hh  RadicalCaloHit.hh  RadicalCaloSD.hh  RadicalDetectorConstruction.hh  RadicalDetectorMessenger.hh  RadicalEventAction.hh  RadicalGeometryConfig.hh  RadicalMaterials.hh  RadicalPrimaryGeneratorAction.hh  RadicalRunAction.hh  RadicalStackingAction.hh  RadicalSteppingAction.hh
macros/: array3x3.mac  energy_scan.mac  enhanced_module.mac  eres_scan.mac  eres_scan_array.mac  hex7_timing_scan.mac  hex_module.mac  init_vis.mac  run_beam.mac  single_module.mac  timing_scan.mac  timing_scan_hi.mac  vis.mac
scripts/: install_geant4.sh
src/: RadicalActionInitialization.cc  RadicalCaloSD.cc  RadicalDetectorConstruction.cc  RadicalDetectorMessenger.cc  RadicalEventAction.cc  RadicalGeometryConfig.cc  RadicalMaterials.cc  RadicalPrimaryGeneratorAction.cc  RadicalRunAction.cc  RadicalStackingAction.cc  RadicalSteppingAction.cc
